Fix header spacing

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -19,12 +19,12 @@ body {
   margin-left: 10px;
   display: inline-block;
   margin: 2px 5px;
-  border-bottom: 3px solid black;
+  border: 3px solid black;
 }
 
 #main-navigation li:hover {
   cursor: pointer;
-  border-color: green;
+  border-bottom-color: green;
 }
 
 #main-navigation a {
